--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="404 Page not found">
 
-<title>404 Page not found | YoC&#43;</title>
+<title>404 Page not found | Apuntes YoC&#43;</title>
 
 <link rel="icon" href="/favicon/favicon-32x32.png" type="image/x-icon">
 <link rel="stylesheet" href="/main.min.css" media="screen">
@@ -25,8 +25,8 @@
         
         <a class="gdoc-header__link" href="http://localhost">
             <span class="gdoc-brand flex align-center">
-                <img class="gdoc-brand__img" src="/brand.svg" alt="YoC&#43;" width=38 height=38>
-                YoC&#43;
+                <img class="gdoc-brand__img" src="/brand.svg" alt="Apuntes YoC&#43;" width=38 height=38>
+                Apuntes YoC&#43;
             </span>
         </a>
     </div>
