--- a/public/404.html
+++ b/public/404.html
@@ -8,9 +8,9 @@
 
 <title>404 Page not found | Apuntes YoC&#43; Comunitarios</title>
 
-<link rel="icon" href="/ele38.github.io/favicon/favicon-32x32.png" type="image/x-icon">
-<link rel="stylesheet" href="/ele38.github.io/main.min.css" media="screen">
-<link rel="stylesheet" href="/ele38.github.io/custom.css" media="screen">
+<link rel="icon" href="/yoc&#43;/favicon/favicon-32x32.png" type="image/x-icon">
+<link rel="stylesheet" href="/yoc&#43;/main.min.css" media="screen">
+<link rel="stylesheet" href="/yoc&#43;/custom.css" media="screen">
 
 <!--Made with Geekdoc theme https://github.com/xoxys/hugo-geekdoc-->
 
@@ -23,9 +23,9 @@
         <header class="gdoc-header">
     <div class="container flex align-center justify-between">
         
-        <a class="gdoc-header__link" href="ele38.github.io">
+        <a class="gdoc-header__link" href="yoc&#43;">
             <span class="gdoc-brand flex align-center">
-                <img class="gdoc-brand__img" src="/ele38.github.io/brand.svg" alt="Apuntes YoC&#43; Comunitarios" width=38 height=38>
+                <img class="gdoc-brand__img" src="/yoc&#43;/brand.svg" alt="Apuntes YoC&#43; Comunitarios" width=38 height=38>
                 Apuntes YoC&#43; Comunitarios
             </span>
         </a>
@@ -43,7 +43,7 @@
                     <div class="gdoc-error__line gdoc-error__code">Error 404</div>
                     <div class="gdoc-error__line gdoc-error__help">
                         Seems like what you are looking for can't be found. Don't worry we can
-                        bring you back to the <a class="gdoc-error__link" href="ele38.github.io">homepage</a>.
+                        bring you back to the <a class="gdoc-error__link" href="yoc&#43;">homepage</a>.
                     </div>
                 </div>
             </div>
